force-app/main/default/objects/Quote__c/fields/Agreement_Value_Before_GST__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_Before_GST__c</fullName>
    <formula>IF(
   RecordType.Name = &apos;Apartments&apos;,

    /* APARTMENT - Full Calculation */
(Rate_per_sqft__c * Super_Built_UpArea__c )+
(Unit__r.Floor_Rise_Charge__c * Super_Built_UpArea__c) +
(Unit__r.East_Facing_Charges__c * Super_Built_UpArea__c) +
(Unit__r.Corner_Charges__c * Super_Built_UpArea__c) +
(Unit__r.Road_View_Charges__c * Super_Built_UpArea__c )+
(Unit__r.ORR_View_Charges__c * Super_Built_UpArea__c) +
(Unit__r.Garden_View_Charges__c * Super_Built_UpArea__c) +
(Unit__r.Clubhouse_Charges__c) +
(Unit__r.Water_Electricity_Charges__c) +
(Unit__r.Car_Parking__c),

    /* PLOT - Simple Calculation */
    Base_Value__c + Total_Infrastructure_Charges__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Value Before GST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>