force-app/main/default/objects/Quote__c/fields/Base_Value__c.field-meta.xml
<CustomField>
    <fullName>Base_Value__c</fullName>
    <formula>CEILING(Rate_sq_Ft_Discount__c * Super_Built_UpArea__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rate(sq. Ft)(Discount) * Super Built Up Area</inlineHelpText>
    <label>Base Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>