force-app/main/default/objects/Quote__c/fields/CFO_Approval__c.field-meta.xml
<CustomField>
    <fullName>CFO_Approval__c</fullName>
    <formula>Discount_Price__c &gt;  HOD_Discount__c &amp;&amp; Discount_Price__c &lt;= CFO_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CFO Approval</label>
    <type>Checkbox</type>
</CustomField>