force-app/main/default/objects/Quote__c/fields/Channel_Partner_Lead__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Lead__c</fullName>
    <formula>if(TEXT(Related_Source__r.Source_Type__c) =&apos;Channel Partner&apos;,TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Partner Lead</label>
    <type>Checkbox</type>
</CustomField>