force-app/main/default/objects/Quote__c/fields/Corner_Charges_T__c.field-meta.xml
<CustomField>
    <fullName>Corner_Charges_T__c</fullName>
    <formula>Corner_Charges__c * Super_Built_UpArea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corner Charges T</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>