force-app/main/default/objects/Quote__c/fields/East_Facing_Charges__c.field-meta.xml
<CustomField>
    <fullName>East_Facing_Charges__c</fullName>
    <formula>Unit__r.East_Facing_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>East Facing Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>