force-app/main/default/objects/Quote__c/fields/Facing_Charges_T__c.field-meta.xml
<CustomField>
    <fullName>Facing_Charges_T__c</fullName>
    <formula>Facing_charges__c * Super_Built_UpArea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facing Charges T</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>