force-app/main/default/objects/Quote__c/fields/Floor_Rise_Charges_Rate_per_Sq_mt__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rise_Charges_Rate_per_Sq_mt__c</fullName>
    <formula>Floor_Rise_Charges_Rate__c / 10.76391</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor Rise Charges Rate per Sq. mt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>