force-app/main/default/objects/Quote__c/fields/Garden_View_Charges_T__c.field-meta.xml
<CustomField>
    <fullName>Garden_View_Charges_T__c</fullName>
    <formula>Garden_View_Charges__c * Super_Built_UpArea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Garden View Charges T</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>