force-app/main/default/objects/Quote__c/fields/GRAND_TOTAL__c.field-meta.xml
<CustomField>
    <fullName>GRAND_TOTAL__c</fullName>
    <formula>if( RecordType.Name ==&apos;Apartments&apos;,Other_Charges_after_GST__c+Agreement_Value_after_GST__c, (Total_Sales_Consideration__c+GST_On_Other_Charges_Actual__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GRAND TOTAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>