force-app/main/default/objects/Quote__c/fields/Grand_Total_Before_Discount__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Before_Discount__c</fullName>
    <formula>/*Total_Other_Charges__c+
(( (Super_Built_UpArea__c*Rate_sq_Ft__c) + Water_Electricity_Rate__c + amenities_charges__c )+ Car_Parking__c)+(( (Super_Built_UpArea__c*Rate_sq_Ft__c) + Water_Electricity_Rate__c + amenities_charges__c )+ Car_Parking__c)*GST_for_Aggrement_Value__c*/

((Super_Built_UpArea__c*Rate_sq_Ft__c) +Total_Infrastructure_Charges__c)+Total_Maintenance_Amount__c+Clubhouse_Charges__c + GST_On_Other_Charges_Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total Before Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>