force-app/main/default/objects/Quote__c/fields/GST_for_Agreement_value_Formula__c.field-meta.xml
<CustomField>
    <fullName>GST_for_Agreement_value_Formula__c</fullName>
    <formula>GST_for_Aggrement_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST for Agreement value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>