force-app/main/default/objects/Quote__c/fields/GST_for_other_charges_Formula__c.field-meta.xml
<CustomField>
    <fullName>GST_for_other_charges_Formula__c</fullName>
    <formula>GST_For_Other_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST for other charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>