force-app/main/default/objects/Quote__c/fields/GST_On_Club_House__c.field-meta.xml
<CustomField>
    <fullName>GST_On_Club_House__c</fullName>
    <formula>(Clubhouse_Charges__c * GST_For_Other_Charges__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Club Charges * GST For Other Charges</inlineHelpText>
    <label>GST On Club House</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>