force-app/main/default/objects/Quote__c/fields/GST_On_Infrastructure_Charges__c.field-meta.xml
<CustomField>
    <fullName>GST_On_Infrastructure_Charges__c</fullName>
    <description>//if(With_GST__c == true,(Total_Infrastructure_Charges__c * GST_For_Other_Charges__c),0)</description>
    <formula>if(With_GST__c == true,(Total_Infrastructure_Charges__c * GST_For_Other_Charges__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST On Infrastructure Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>