force-app/main/default/objects/Quote__c/fields/HOD_Approval__c.field-meta.xml
<CustomField>
    <fullName>HOD_Approval__c</fullName>
    <formula>Discount_Price__c &gt;  TL_Discount__c &amp;&amp; Discount_Price__c &lt;= CFO_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HOD Approval</label>
    <type>Checkbox</type>
</CustomField>