force-app/main/default/objects/Quote__c/fields/HOD_Discount__c.field-meta.xml
<CustomField>
    <fullName>HOD_Discount__c</fullName>
    <label>HOD Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>