force-app/main/default/objects/Quote__c/fields/Interior_Charges__c.field-meta.xml
<CustomField>
    <fullName>Interior_Charges__c</fullName>
    <label>Interior Charges</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>