force-app/main/default/objects/Quote__c/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <formula>Owner:User.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Email</label>
    <type>Text</type>
</CustomField>