force-app/main/default/objects/Quote__c/fields/Other_Charges_after_GST__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_after_GST__c</fullName>
    <formula>IF(
RecordType.Name = &apos;Apartments&apos;,Sub_Total_Of_Other_Charges__c	+ GST_On_Other_Charges_Actual__c+Total_Corpus_Fund__c,Sub_Total_Of_Other_Charges__c	+ GST_On_Other_Charges_Actual__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Charges after GST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>