force-app/main/default/objects/Quote__c/fields/Plot_Side_Feet__c.field-meta.xml
<CustomField>
    <fullName>Plot_Side_Feet__c</fullName>
    <formula>SQRT(Super_Built_UpArea__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plot Side Feet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>