force-app/main/default/objects/Quote__c/fields/Rate_sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Rate_sq_Ft__c</fullName>
    <formula>/*Rate_per_sqft__c+ Floor_Rise_Charges_Rate__c+ Facing_charges__c+Corner_Charges__c*/
IF(
    RecordType.Name = &quot;Apartments&quot;,
    Rate_per_sqft__c,
    Rate_per_sqft__c + Floor_Rise_Charges_Rate__c + Facing_charges__c + Corner_Charges__c + PLC_Charges__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate(sq. Ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>