force-app/main/default/objects/Quote__c/fields/Rate_sq_Ft_Discount__c.field-meta.xml
<CustomField>
    <fullName>Rate_sq_Ft_Discount__c</fullName>
    <formula>Rate_sq_Ft__c- Discount_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rate(sq. Ft) - Discount Price</inlineHelpText>
    <label>Rate(sq. Ft)(Discount)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>