force-app/main/default/objects/Quote__c/fields/RM_Discount__c.field-meta.xml
<CustomField>
    <fullName>RM_Discount__c</fullName>
    <label>RM Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>