force-app/main/default/objects/Quote__c/fields/Sub_Total_Of_Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total_Of_Other_Charges__c</fullName>
    <formula>IF(
RecordType.Name = &apos;Apartments&apos;,Total_Maintenance_Amount__c+Legal_Documentation_Charges__c,Total_Maintenance_Amount__c+Total_Corpus_Fund__c+Legal_Documentation_Charges__c+Clubhouse_Charges__c+Total_Infrastructure_Charges__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Total Of Other Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>