force-app/main/default/objects/Quote__c/fields/TL_Approval__c.field-meta.xml
<CustomField>
    <fullName>TL_Approval__c</fullName>
    <formula>Discount_Price__c &gt;  RM_Discount__c &amp;&amp; Discount_Price__c &lt;= CFO_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TL Approval</label>
    <type>Checkbox</type>
</CustomField>