force-app/main/default/objects/Quote__c/fields/TL_Discount__c.field-meta.xml
<CustomField>
    <fullName>TL_Discount__c</fullName>
    <label>TL Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>