force-app/main/default/objects/Quote__c/fields/Total_Infrastructure_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Infrastructure_Charges__c</fullName>
    <formula>Infrastructure_Charges_per_sqft__c *  Super_Built_UpArea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Infrastructure Charges per sqft * Super Built Up Area</inlineHelpText>
    <label>Total Infrastructure Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>