force-app/main/default/objects/Quote__c/fields/Total_Sales_Consideration__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Consideration__c</fullName>
    <formula>Agreement_Value_Before_GST__c+Total_Maintenance_Amount__c+Clubhouse_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales Consideration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>