force-app/main/default/objects/Quote__c/listViews/Zuari_Gangothri_Tribhuja.listView-meta.xml
<ListView>
    <fullName>Zuari_Gangothri_Tribhuja</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Unit__c</columns>
    <columns>Quote_status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Zuari Gangothri Tribhuja</value>
    </filters>
    <label>Zuari Gangothri Tribhuja</label>
</ListView>