force-app/main/default/objects/Quote__c/listViews/Zuari_Garden_City_Plots.listView-meta.xml
<ListView>
    <fullName>Zuari_Garden_City_Plots</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Unit__c</columns>
    <columns>Quote_status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Zuari Garden City</value>
    </filters>
    <label>Zuari Garden City - Plots</label>
</ListView>